// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileDecorator renders after text content 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <small
        class="text-monospace font-weight-normal test-file-decoration-text after"
        data-state="closed"
      >
        src decoration
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileDecorator renders both after text content and meter 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <small
        class="text-monospace font-weight-normal test-file-decoration-text after"
        data-state="closed"
      >
        src decoration
      </small>
      <meter
        class="test-file-decoration-meter meter ml-2"
        data-state="closed"
        high="60"
        low="50"
        max="100"
        min="0"
        optimum="70"
        value="40"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileDecorator renders meter 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <meter
        class="test-file-decoration-meter meter"
        data-state="closed"
        high="60"
        low="50"
        max="100"
        min="0"
        optimum="70"
        value="40"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileDecorator respects active state 1`] = `
<DocumentFragment>
  <div
    class="d-flex align-items-center text-nowrap pl-1 test-file-decoration-container"
  >
    <div
      class="d-flex align-items-center fileDecoration"
    >
      <small
        class="text-monospace font-weight-normal test-file-decoration-text after afterActive"
        data-state="closed"
      >
        src decoration
      </small>
    </div>
  </div>
</DocumentFragment>
`;
